--- a/css/styles.css
+++ b/css/styles.css
@@ -16,14 +16,51 @@ body {
   --background-color-portfolio: #f4f4fd;
   --color-button-nav: #404bbf;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 a {
   text-decoration: none;
   color: var(--background-color);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+p {
+  margin: 0;
+}
+
 ul,
 li {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 /**
   |============================
@@ -33,8 +70,25 @@ li {
 
 .header-nav {
   background: var(--primary-background);
+  border-bottom: 1px solid var(--cornflower, #e7e9fc);
+  width: 1158px;
 }
-
+.header-nav .container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 40px;
+}
 .link {
   text-decoration: none;
 }
@@ -48,6 +102,10 @@ li {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   color: var(--color-button);
+  display: block;
+  display: inline-block;
+  padding-left: 156px;
+  padding-right: 76px;
 }
 .header-logo-studio {
   color: var(--background-color);
@@ -65,6 +123,7 @@ li {
   line-height: 1.5;
   letter-spacing: 0.02em;
   list-style-type: none;
+  display: block;
 }
 
 .nav-link:hover,
@@ -72,8 +131,19 @@ li {
   color: var(--color-button-nav);
 }
 
-.contacts {
+.nav-list-contacts {
   font-style: normal;
+  display: block;
+  display: inline-block;
+}
+.contacts-list {
+  display: flex;
+  width: 1158px;
+  flex-direction: row;
+  gap: 40px;
+  align-items: center;
+  padding-left: 332px;
+  padding-right: 40px;
 }
 .contacts-list-link {
   color: var(--primary-color-text);
@@ -82,6 +152,8 @@ li {
   line-height: 1.5;
   letter-spacing: 0.32px;
   font-style: normal;
+  display: block;
+  display: inline-block;
 }
 .contacts-list-link:hover,
 .contacts-list-link:focus {
