--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,8 @@ nav {
   letter-spacing: 0.02em;
   list-style-type: none;
   display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .nav-link:hover,
@@ -175,6 +177,16 @@ nav {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.64px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  display: block;
+  padding: 16px 32px;
+  min-width: 169px;
+  margin-top: 48px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 188px;
+  justify-content: center;
 }
 
 .button:hover,
@@ -211,12 +223,29 @@ nav {
 .portfolio {
   color: var(--primary-background);
   text-align: center;
+  flex-shrink: 0;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
+  display: block;
+  align-items: center;
+  max-width: 496px;
+  padding-top: 188px;
+  padding: auto;
+  margin-bottom: 48px;
+  margin: 0 auto;
 }
+.hero .container {
+  max-width: 1158px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 120px;
 
+}
 .concept-title,
 .portfolio-subtitle {
   color: var(--background-color);
@@ -224,7 +253,7 @@ nav {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
-  text-align: center;
+
 }
 
 .concept-text,
