--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,7 @@ p {
 ul,
 li {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+
 }
 .container {
   max-width: 1158px;
@@ -244,6 +243,35 @@ nav {
   padding: 0;
   margin: 0;
   margin-bottom: 120px;
+}
+
+/**
+  |============================
+  |      Concept
+  |============================
+*/
+.concept .container {
+  max-width: 1128px;
+  padding: 24px;
+  margin: 0;
+}
+.concept-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 24px;
+  column-gap: 8px;
+  align-content: center;
+  justify-content: space-between;
+  margin-left: 156px;
+  margin-top: 0;
+  margin-bottom: 120px;
+  margin-right: 156px;
+
+}
+.concept-item {
+  width: calc((100% - 72px) / 4);
+}
+
 
 }
 .concept-title,
@@ -252,8 +280,7 @@ nav {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  letter-spacing: 0.4px;
-
+  letter-spacing: 0.02em;
 }
 
 .concept-text,
@@ -261,7 +288,9 @@ nav {
   color: var(--primary-color-text);
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
+  width: 264px;
+
 }
 .title {
   color: var(--background-color);
