--- a/css/styles.css
+++ b/css/styles.css
@@ -71,25 +71,38 @@ li {
 .header-nav {
   background: var(--primary-background);
   border-bottom: 1px solid var(--cornflower, #e7e9fc);
-  width: 1158px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0;
 }
+
 .header-nav .container {
-  max-width: 1158px;
   display: flex;
+  max-width: 1400px;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
+  padding: 0;
+  margin: 0 auto;
 }
+
 nav {
-  max-width: 1158px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
+  padding: 0;
+  margin-left: 156px;
 }
 .nav-list {
+  gap: 40px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  gap: 40px;
+  margin-left: 76px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .link {
   text-decoration: none;
@@ -103,10 +116,7 @@ nav {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   color: var(--color-button);
-  display: block;
   display: inline-block;
-  margin-left: 156px;
-  padding-right: 76px;
 }
 .header-logo-studio {
   color: var(--background-color);
@@ -120,9 +130,7 @@ nav {
   line-height: 1.5;
   letter-spacing: 0.02em;
   list-style-type: none;
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  display: inline-block;
 }
 
 .nav-link:hover,
@@ -132,18 +140,24 @@ nav {
 
 .nav-list-contacts {
   font-style: normal;
-  display: block;
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin: 0 auto;
 }
 .contacts-list {
-  display: flex;
-  width: 1158px;
-  flex-direction: row;
   gap: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  padding-left: 332px;
-  padding-right: 40px;
+  margin-left: 332px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
+
 .contacts-list-link {
   color: var(--primary-color-text);
   font-size: 16px;
@@ -151,7 +165,6 @@ nav {
   line-height: 1.5;
   letter-spacing: 0.32px;
   font-style: normal;
-  display: block;
   display: inline-block;
 }
 .contacts-list-link:hover,
@@ -201,6 +214,7 @@ nav {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.64px;
+  display: block;
 }
 .button-portfolio:hover,
 .button-portfolio:focus {
@@ -265,15 +279,13 @@ nav {
   margin-left: 156px;
   margin-top: 0;
   margin-bottom: 120px;
-  
 }
 .concept-item {
   flex-basis: calc((100% - 72px) / 4);
   justify-content: center;
 }
 
-.concept-title,
-.portfolio-subtitle {
+.concept-title {
   color: var(--background-color);
   font-size: 20px;
   font-weight: 500;
@@ -282,11 +294,9 @@ nav {
   display: block;
   justify-content: center;
   margin-bottom: 8px;
- 
 }
 
-.concept-text,
-.portfolio-text {
+.concept-text {
   color: var(--primary-color-text);
   font-size: 16px;
   line-height: 1.5;
@@ -296,24 +306,37 @@ nav {
   justify-content: center;
 }
 
-.doing .container {
+/**
+  |============================
+  |         Doing
+  |============================
+*/
+.doing {
   max-width: 1128px;
   padding: 0;
-  margin: 0;
-
+  margin: 0 auto;
 }
+
 .doing-list {
   gap: 24px;
   display: flex;
   align-content: center;
   justify-content: space-between;
-  padding-left: 156px;
-  padding-right: 156px;
   margin-top: 72px;
   margin-bottom: 120px;
+  padding: 0;
 }
+
+.doing-item {
+  display: inline-block;
+  flex-basis: calc((100% - 48px) / 3);
+  padding: 0;
+  margin: 0;
+}
+
 .img-doing {
   display: block;
+  justify-content: center;
 }
 
 .title {
@@ -323,15 +346,12 @@ nav {
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
-  text-align: center;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0;
   padding: 0;
   justify-content: center;
   align-content: center;
 }
-
 
 /**
   |============================
@@ -339,12 +359,6 @@ nav {
   |============================
 */
 
-.team .container {
-  width: 1158px;
-  padding: 0;
-  margin: 0 auto;
-  
-}
 .team-list {
   display: flex;
   flex-wrap: wrap;
@@ -353,7 +367,7 @@ nav {
   align-content: center;
   justify-content: space-between;
   margin: 0 auto;
-  max-width: 1158px;
+  padding: 0;
 }
 
 .team-title {
@@ -371,7 +385,6 @@ nav {
   padding-bottom: 72px;
   justify-content: center;
   align-content: center;
-
 }
 
 .card-heading {
@@ -400,7 +413,9 @@ nav {
 }
 .team {
   background: var(--background-color-portfolio);
-  max-width: 1400px;
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .team-item {
@@ -408,29 +423,99 @@ nav {
   text-align: center;
   margin-bottom: 120px;
   border-radius: 0px 0px 4px 4px;
-  background: var(--white, #FFF);
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  background: var(--white, #fff);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
   gap: 24px;
 }
 
+/**
+  |============================
+  |         Portfolio
+  |============================
+*/
+
+.portfolio {
+  max-width: 1400px;
+  background: #fff;
+  padding-top: 96px;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio-button-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  padding-bottom: 72px;
+  margin-left: 427px;
+  margin-right: 156px;
+  margin: 0;
+}
+
+.prj-card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+  margin: 0;
+  padding: 0;
+  align-content: flex-start;
+  justify-content: flex-start;
+  margin-bottom: 120px;
+}
 
 .item-card {
   background: var(--primary-background);
+  width: calc((100% - 48px) / 3);
+  padding: 0;
+  margin: 0;
+  border: 1px solid var(--cornflower, #e7e9fc);
+  background: var(--white, #fff);
 }
+
+.portfolio-subtitle {
+  color: var(--background-color);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  display: block;
+  margin-top: 32px;
+  margin-bottom: 8px;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+  justify-content: flex-start;
+  align-content: flex-start;
+}
+
+.portfolio-text {
+  color: var(--primary-color-text);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  width: 264px;
+  display: block;
+  margin-bottom: 32px;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0 15px;
+  justify-content: flex-start;
+  align-content: flex-start;
+}
+
 /**
   |============================
   |        Footer stales
   |============================
 */
-.footer {
+.footer .container {
   background: var(--background-color);
   max-width: 1400px;
-}
-
-.footer .container {
-  width: 1158px;
+  margin: 0 auto;
   padding: 0;
-  margin: 0;
 }
 
 .footer-logo-web {
@@ -441,11 +526,11 @@ nav {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   color: var(--color-button);
-  display: block;
   display: inline-block;
   margin-left: 156px;
   margin-top: 101.5px;
   margin-bottom: 17.5px;
+  padding: 0;
 }
 
 .footer-logo-studio {
