--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,8 @@ nav {
 .hero {
   background-color: var(--background-color);
   max-width: 1400px;
+  margin: 0 auto;
+  padding: 0;
 }
 
 /**
@@ -249,14 +251,14 @@ nav {
   margin: 0 auto;
 }
 .hero .container {
-  max-width: 1158px;
+  max-width: 1400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   align-content: center;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 120px;
 }
 
@@ -266,9 +268,10 @@ nav {
   |============================
 */
 .concept .container {
-  max-width: 1158px;
-  padding: 0 15px;
-  margin: 0;
+  background: #fff;
+  width: 1128px;
+  padding: 0;
+  margin: 0 auto;
 }
 .concept-list {
   display: flex;
@@ -276,6 +279,7 @@ nav {
   gap: 24px;
   align-items: center;
   align-content: center;
+  justify-content: center;
   margin-left: 156px;
   margin-top: 0;
   margin-bottom: 120px;
@@ -312,7 +316,8 @@ nav {
   |============================
 */
 .doing {
-  max-width: 1128px;
+  background: #fff;
+  max-width: 1400px;
   padding: 0;
   margin: 0 auto;
 }
@@ -347,7 +352,7 @@ nav {
   letter-spacing: 0.72px;
   text-transform: capitalize;
   display: block;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   justify-content: center;
   align-content: center;
@@ -413,7 +418,7 @@ nav {
 }
 .team {
   background: var(--background-color-portfolio);
-  max-width: 1158px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 0;
 }
