--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /**
   |============================
-  |       Base stales
+  |       Base styles
   |============================
 */
 body {
@@ -34,9 +34,11 @@ h4,
 h5,
 h6 {
   margin: 0;
+  padding: 0;
 }
 p {
   margin: 0;
+  padding: 0;
 }
 
 ul,
@@ -351,7 +353,7 @@ nav {
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
-  display: block;
+  display: flex;
   margin: 0 auto;
   padding: 0;
   justify-content: center;
@@ -485,10 +487,10 @@ nav {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  display: block;
+  display: flex;
   margin-top: 32px;
   margin-bottom: 8px;
-  margin-left: 0;
+  margin-left: 16px;
   margin-right: 0;
   padding: 0;
   justify-content: flex-start;
@@ -501,12 +503,12 @@ nav {
   line-height: 1.5;
   letter-spacing: 0.02em;
   width: 264px;
-  display: block;
+  display: flex;
   margin-bottom: 32px;
   margin-top: 0;
-  margin-left: 0;
+  margin-left: 16px;
   margin-right: 0;
-  padding: 0 15px;
+  padding: 0;
   justify-content: flex-start;
   align-content: flex-start;
 }
