--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
   --color-button: #4d5ae5;
   --background-color-portfolio: #f4f4fd;
   --color-button-nav: #404bbf;
+  --color-button-portfolio: #e7e9fc;
 }
 
 *,
@@ -48,7 +49,7 @@ li {
   margin: 0;
 }
 .container {
-  max-width: 1158px;
+  width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -80,11 +81,11 @@ li {
 
 .header-nav .container {
   display: flex;
-  max-width: 1400px;
+  width: 1158px;
   flex-direction: row;
   align-items: center;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
 }
 
 nav {
@@ -93,7 +94,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0;
-  margin: 0 0 0 156px;
+  margin: 0;
 }
 .nav-list {
   gap: 40px;
@@ -101,11 +102,16 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 0 0 0 76px;
-  padding: 24px 0 24px 0;
+  padding: 24px 0;
 }
 .link {
   text-decoration: none;
+}
+
+nav a {
+  display: inline-block;
+  margin-left: 156px;
+  margin-right: 76px;
 }
 
 .header-logo-web {
@@ -116,10 +122,15 @@ nav {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   color: var(--color-button);
-  display: inline-block;
 }
 .header-logo-studio {
   color: var(--background-color);
+}
+
+.nav-list-item {
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
 
 .nav-link {
@@ -131,6 +142,7 @@ nav {
   letter-spacing: 0.02em;
   list-style-type: none;
   display: inline-block;
+  margin: 0;
 }
 
 .nav-link:hover,
@@ -145,15 +157,16 @@ nav {
   align-items: center;
   padding: 0;
   margin: 0;
+  margin-left: 332px;
 }
 .contacts-list {
+  width: 1158px;
   gap: 40px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  margin: 0 0 0 332px;
-  padding: 24px 0 24px 0;
+  padding: 24px 0;
+  margin: 0;
 }
 
 .contacts-list-link {
@@ -180,7 +193,7 @@ nav {
   background-color: var(--background-color);
   max-width: 1400px;
   margin: 0 auto;
-  padding: 0;
+  padding: 188px 0;
 }
 
 .hero .container {
@@ -191,7 +204,7 @@ nav {
   align-items: center;
   align-content: center;
   padding: 0;
-  margin: 0 auto 120px;
+  margin: 0 auto;
 }
 
 .button {
@@ -204,34 +217,20 @@ nav {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.64px;
+  border: none;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   display: block;
   padding: 16px 32px;
   min-width: 169px;
-  margin: 48px auto 188px;
+  height: 56px;
+  margin-top: 48px;
   justify-content: center;
+  padding: 0;
 }
 
 .button:hover,
 .button:focus {
-  background: var(--color-button-nav);
-  color: var(--primary-background);
-}
-
-.button-portfolio {
-  font-family: 'Roboto', sans-serif;
-  cursor: pointer;
-  color: var(--color-button);
-  background-color: var(--background-color-portfolio);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.64px;
-  display: block;
-}
-.button-portfolio:hover,
-.button-portfolio:focus {
   background: var(--color-button-nav);
   color: var(--primary-background);
 }
@@ -248,9 +247,8 @@ h1,
   display: block;
   align-items: center;
   max-width: 496px;
-  padding-top: 188px;
   padding: auto;
-  margin: 0 auto 48px;
+  margin: 0 auto;
 }
 
 /**
@@ -258,18 +256,25 @@ h1,
   |      Concept
   |============================
 */
-.concept .container {
+
+.concept {
   background: #fff;
-  max-width: 1128px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 120px 0;
+}
+
+.concept .container {
   padding: 0;
   margin: 0 auto;
 }
 .concept-list {
+  max-width: 1128px;
   display: flex;
   flex-wrap: nowrap;
   gap: 24px;
   align-items: center;
-  margin: 0 0 120px 0;
+  margin: 0;
   padding: 0;
 }
 
@@ -307,7 +312,7 @@ h1,
 .doing {
   background: #fff;
   max-width: 1400px;
-  padding: 0;
+  padding-bottom: 120px;
   margin: 0 auto;
 }
 
@@ -316,7 +321,6 @@ h1,
   display: flex;
   align-content: center;
   justify-content: space-between;
-  margin: 72px 0 120px 0;
   padding: 0;
 }
 
@@ -345,6 +349,7 @@ h1,
   padding: 0;
   justify-content: center;
   align-content: center;
+  margin-bottom: 72px;
 }
 
 /**
@@ -352,6 +357,13 @@ h1,
   |      TEAM
   |============================
 */
+
+.team {
+  background: var(--background-color-portfolio);
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 120px 0;
+}
 
 .team-list {
   display: flex;
@@ -374,8 +386,8 @@ h1,
   text-transform: capitalize;
   display: block;
   align-items: center;
-  margin: 0;
-  padding: 120px 0 72px 0;
+  padding: 0;
+  margin-bottom: 72px;
   justify-content: center;
   align-content: center;
 }
@@ -385,34 +397,28 @@ h1,
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
+  text-align: center;
   letter-spacing: 0.02em;
   display: block;
   justify-content: center;
   align-content: center;
-  margin: 32px 0 8px 0;
+  margin-bottom: 8px;
 }
 .card-desc {
   color: var(--primary-color-text);
   font-size: 16px;
   line-height: 1.5;
+  text-align: center;
   letter-spacing: 0.02em;
   width: 264px;
   display: block;
   justify-content: center;
   align-content: center;
-  margin: 0 0 32px 0;
-}
-.team {
-  background: var(--background-color-portfolio);
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 0;
 }
 
 .team-item {
   background: var(--primary-background);
   text-align: center;
-  margin: 0 0 120px 0;
   border-radius: 0px 0px 4px 4px;
   background: var(--white, #fff);
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
@@ -426,6 +432,12 @@ h1,
   max-width: 100%;
   height: auto;
 }
+.mark,
+.tom,
+.camila,
+.daniel {
+  padding: 32px 0;
+}
 
 /**
   |============================
@@ -436,7 +448,8 @@ h1,
 .portfolio {
   max-width: 1400px;
   background: #fff;
-  padding: 96px 0 0 0;
+  padding-top: 96px;
+  padding-bottom: 120px;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
@@ -446,15 +459,34 @@ h1,
   display: flex;
   justify-content: center;
   gap: 24px;
-  padding: 0 0 72px 0;
-  margin: 0 156px 0 427px;
+  margin-bottom: 72px;
+}
+
+.button-portfolio {
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+  color: var(--color-button);
+  background-color: var(--background-color-portfolio);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+  display: block;
+  padding: 12px 24px;
+  border: 1px solid var(--color-button-portfolio);
+  border-radius: 4px;
+}
+.button-portfolio:hover,
+.button-portfolio:focus {
+  background: var(--color-button-nav);
+  color: var(--primary-background);
+  border: 1px solid transparent;
 }
 
 .prj-card-list {
   display: flex;
   flex-wrap: wrap;
   gap: 48px 24px;
-  margin: 0 0 120px 0;
   padding: 0;
   align-content: flex-start;
   justify-content: flex-start;
@@ -465,8 +497,14 @@ h1,
   width: calc((100% - 48px) / 3);
   padding: 0;
   margin: 0;
-  border: 1px solid var(--cornflower, #e7e9fc);
   background: var(--white, #fff);
+}
+
+.prj-card {
+  padding: 32px 16px;
+  border: 1px solid var(--color-button-portfolio);
+  border-top: none;
+  margin-bottom: 8px;
 }
 
 .card-row {
@@ -482,7 +520,6 @@ h1,
   line-height: 1.2;
   letter-spacing: 0.02em;
   display: flex;
-  margin: 32px 0 8px 16px;
   padding: 0;
   justify-content: flex-start;
   align-content: flex-start;
@@ -495,7 +532,6 @@ h1,
   letter-spacing: 0.02em;
   width: 264px;
   display: flex;
-  margin: 0 0 32px 16px;
   padding: 0;
   justify-content: flex-start;
   align-content: flex-start;
@@ -506,10 +542,24 @@ h1,
   |        Footer styles
   |============================
 */
-.footer .container {
+
+.footer {
   background: var(--background-color);
+  padding: 100px 0;
   max-width: 1400px;
   margin: 0 auto;
+}
+
+.footer .container {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+footer a {
+  display: inline-block;
+  margin-left: 156px;
+  margin-bottom: 16px;
   padding: 0;
 }
 
@@ -521,11 +571,6 @@ h1,
   letter-spacing: 0.54px;
   text-transform: uppercase;
   color: var(--color-button);
-  display: inline-block;
-  margin-left: 156px;
-  margin-top: 101.5px;
-  margin-bottom: 17.5px;
-  padding: 0;
 }
 
 .footer-logo-studio {
