--- a/css/styles.css
+++ b/css/styles.css
@@ -84,8 +84,9 @@ li {
   max-width: 1158px;
   flex-direction: row;
   align-items: center;
-  padding: 0 15px;
+  padding: 0;
   margin: 0 auto;
+  margin-left: 156px;
 }
 
 .navigation {
@@ -547,14 +548,14 @@ h1,
 
 .footer .container {
   max-width: 1158px;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 }
 
 .footer a {
   display: inline-block;
-  margin-left: 156px;
   margin-bottom: 16px;
+  margin-left: 156px;
   padding: 0;
 }
 
@@ -566,7 +567,6 @@ h1,
   letter-spacing: 0.54px;
   text-transform: uppercase;
   color: var(--color-button);
-  margin-bottom: 16px;
 }
 
 .footer-logo-studio {
@@ -579,6 +579,5 @@ h1,
   letter-spacing: 0.02em;
   color: var(--background-color-portfolio);
   margin-left: 156px;
-  padding-bottom: 100px;
   max-width: 264px;
 }
