--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,6 @@ li {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 156px;
 }
 
 .navigation {
@@ -441,8 +440,8 @@ h1,
   display: flex;
   flex-wrap: wrap;
   gap: 48px 24px;
-  align-content: flex-start;
-  justify-content: flex-start;
+  align-content: center;
+  justify-content: center;
 }
 
 .item-card {
